--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "npm-boilerplate",
+  "name": "text-encrypter",
   "version": "1.0.0",
-  "description": "This is the boilerplate for the module development of npm",
+  "description": "The library to encrypt/decrypt text using caesar cipher mechanism",
   "type": "module",
   "source": "src/index.js",
   "exports": {
@@ -20,20 +20,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yousufkalim/npm-boilerplate.git"
+    "url": "git+https://github.com/yousufkalim/text-encrypter.git"
   },
   "keywords": [
-    "npm",
-    "package",
-    "module",
-    "boilerplate"
+    "text",
+    "encrypt",
+    "decrypt",
+    "caesar",
+    "cipher"
   ],
   "author": "Yousuf Kalim <yousufkalim@outlook.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yousufkalim/npm-boilerplate/issues"
+    "url": "https://github.com/yousufkalim/text-encrypter/issues"
   },
-  "homepage": "https://github.com/yousufkalim/npm-boilerplate#readme",
+  "homepage": "https://github.com/yousufkalim/text-encrypter#readme",
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "commitlint-config-non-conventional": "^1.0.1",
