--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "The library to encrypt/decrypt text using caesar cipher mechanism",
   "type": "module",
-  "source": "src/index.js",
+  "source": "src/index.ts",
   "exports": {
     "require": "./dist/index.cjs",
     "default": "./dist/index.modern.js"
@@ -11,12 +11,13 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.module.js",
   "unpkg": "./dist/index.umd.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "microbundle",
+    "build": "rm -rf ./dist && microbundle --tsconfig ./tsconfig.json",
     "dev": "microbundle watch",
     "prepare": "husky install",
     "lint": "eslint src test",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,14 @@
     "lint-staged": "^13.0.3",
     "microbundle": "^0.15.1",
     "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "@types/jest": "^29.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "*"
   }
 }
